Fix horizontal scroll on 320px

--- a/css/style.css
+++ b/css/style.css
@@ -977,7 +977,7 @@ body {
     #slide2:checked ~ #arrows label:nth-child(3),
     #slide3:checked ~ #arrows label:nth-child(4),
     #slide4:checked ~ #arrows label:nth-child(1) {
-        right: -71px;
+        right: -69px;
     }
 
     .slider__switches {
@@ -1166,6 +1166,10 @@ body {
     .wrapper__item:last-child {
         display: block;
         margin: 70px auto 93px;
+    }
+
+    .updates {
+        width: 320px;
     }
 
     .updates__heading {
